fix: header padding on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -98,6 +98,7 @@ small {
   height:23px;
   z-index: 100;
   background-color:white;
+  padding: 12px 0;
 }
 
 .logo {
