--- a/assets/css/templates/project.css
+++ b/assets/css/templates/project.css
@@ -62,6 +62,11 @@ main {
     border:solid white 1px;
 }
 
+.project__title {
+    margin: 0;
+    margin-top: 24px;
+}
+
 @media screen and (min-width: 60rem) {
     .project__images_container {
         grid-column-start: 2;
